missed javax.xml.bind missed added on dependance managment system

--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,11 @@
 			<version>0.9.1</version>
 		</dependency>
 		
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
