--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url = jdbc:mysql://127.0.01:3306/hrm_account
 spring.datasource.username = root
 spring.datasource.password = 
-pring.jpa.defer-datasource-initialization = true  
+spring.jpa.defer-datasource-initialization = true  
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
