--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 
+spring.datasource.url = jdbc:mysql://127.0.01:3306/hrm_account
+spring.datasource.username = root
+spring.datasource.password = 
+spring.jpa.defer-datasource-initialization = true  
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
