--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:mysql://127.0.01:3306/hrm_account
+spring.datasource.url = jdbc:mysql://127.0.01:3306/hrm_account?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UT
 spring.datasource.username = root
 spring.datasource.password = 
 spring.jpa.defer-datasource-initialization = true  
