--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8082
 spring.datasource.url = jdbc:mysql://127.0.01:3306/hrm_account_test?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UT
 spring.datasource.username = root
 spring.datasource.password = 
