adding thymeleaf dependancy,home page controller,index html file and enable CROS headers

--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,14 @@
 			<scope>runtime</scope>
 		</dependency>
 		
+		<!-- Thymeleaf dependancy section -->
+
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-thymeleaf</artifactId>
+	</dependency>
+		<!-- ================================ -->
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
